fix: hover on button only on mobile

--- a/src/shared/ui/button-blue/button-blue.module.scss
+++ b/src/shared/ui/button-blue/button-blue.module.scss
@@ -12,7 +12,9 @@
 	border-radius: 10px;
 	transition: $default-trans;
 
-	&:hover{
-		background-color: $color-blue-hover;
+	@media (hover:hover) {
+		&:hover{
+			background-color: $color-blue-hover;
+		}
 	}
 }
